# demo-app

./: README.md  package.json
src/: index.tsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: cmd.rs  main.rs
src/components/App/: App.styles.ts  App.tsx
src/components/Intro/: Intro.styles.ts  Intro.tsx  package.json
src/components/Note/: Note.styles.tsx  Note.tsx  package.json
src/components/Settings/: Settings.styles.ts  Settings.tsx
src/components/Toolbar/: ToolButton.styles.ts  ToolButton.tsx  Toolbar.styles.ts  Toolbar.ts  Toolbar.tsx  ToolbarTools.tsx
src/hooks/: usePersistence.ts
src/state/: index.ts  persistence.ts
