[package]
name = "phosphor-draw"
version = "0.1.3"
description = "A Tauri Demo App Using Phosphor"
authors = [ "you" ]
license = "MIT"
repository = ""
default-run = "phosphor-draw"
edition = "2018"
build = "src/build.rs"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = [ "derive" ] }
tauri = { version = "0.11", features = [ "all-api" ] }

[target."cfg(windows)".build-dependencies]
winres = "0.1"

[features]
embedded-server = [ "tauri/embedded-server" ]
no-server = [ "tauri/no-server" ]

[[bin]]
name = "phosphor-draw"
path = "src/main.rs"
